# MoveMaps

./: .gitignore  AUTHORS  CreaturesToCoords.py  GenerateMap.py  Tills.xls  configure.ac  mmap.conf  readme.rtf
StartCoords/: 000_27_27.txt  000_27_28.txt  000_27_29.txt  000_28_27.txt  000_28_28.txt  000_28_29.txt  000_51_29.txt  001_39_40.txt
data/SuperShader/: NonShadowedPass.pix  NonShadowedPass.vrt  ShadowMappedLightPass.pix  ShadowMappedLightPass.vrt
dep/include/GLG3D/: CarbonWindow.h
src/: Makefile.am
src/benchmark/: Makefile.am  main.cpp
src/connector/: Makefile.am  MapConnector.cpp  MapConnector.h  main.cpp
src/generator/: Makefile.am  main.cpp
src/mmap/: BitArray.h  GridMapManager.cpp  GridMapManager.h  Makefile.am  MoveLayer.cpp  MoveLayer.h  MoveMapAreaFinder.cpp  MoveMapAreaFinder.h  MoveMapBox.cpp  MoveMapBox.h  MoveMapBoxContainer.cpp  MoveMapBoxContainer.h  MoveMapGenerator.cpp  MoveMapGenerator.h  MoveZone.cpp  MoveZone.h  PathGenerator.h  PositionControlArray.h  RStarTree.h  StepDirections.cpp  StepDirections.h  VectorMoveMap.cpp  VectorMoveMap.h  VectorStack.h
src/viewer/: Makefile.am  ModelContainerView.cpp  ModelContainerView.h  main.cpp
src/vmap2/: CoordModelMapping.cpp  CoordModelMapping.h  Makefile.am  Makefile.in  MapAssembler.cpp  MapAssembler.h  Model.cpp  Model.h  ModelTriangle.cpp  ModelTriangle.h  VGrid.cpp  VGrid.h  VMap.cpp  VMap.h  VTree.h
src/vmap_assembler/: Makefile.am  Makefile.in  main.cpp
src/vmap_debugger/: Makefile.am  Makefile.in  ViewApp.cpp  ViewApp.h  main.cpp
win/: MoveMapGen_VC80.sln  MoveMapViewer_VC80.sln
win/VC80/: MoveMapGenVC80.vcproj  MoveMapViewVC80.vcproj
