
noinst_LIBRARIES = libmmaps.a

libmmaps_a_CPPFLAGS = -I$(top_srcdir)/dep/include -I$(top_srcdir)/src/vmap

libmmaps_a_SOURCES = \
BitArray.h \
GridMapManager.cpp \
GridMapManager.h \
MoveLayer.cpp \
MoveLayer.h \
MoveMapAreaFinder.cpp \
MoveMapAreaFinder.h \
MoveMapBox.cpp \
MoveMapBox.h \
MoveMapBoxContainer.cpp \
MoveMapBoxContainer.h \
MoveMapGenerator.cpp \
MoveMapGenerator.h \
PositionControlArray.h \
StepDirections.cpp \
StepDirections.h \
VectorMoveMap.cpp \
VectorMoveMap.h \
VectorStack.h
